fix: fix order button when some product is filtred by name

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,6 +65,16 @@ main {
 	text-align: center;
 }
 
+.deleteButton {
+	font-size: 1.5rem;
+	cursor: pointer;
+	transition: color .3s;
+}
+
+.deleteButton:hover {
+	color: #4b4b4b;
+}
+
 .showArrow {
 	display: block !important;
 }
